updating mlflow example

--- a/python-resolvers.mdx
+++ b/python-resolvers.mdx
@@ -595,7 +595,9 @@ feature time is also returned.
 To test your Python resolvers, you can set up [unit tests](/docs/unit-tests), construct
 [integration tests](/docs/integration-tests) or iterate on a branch.
 
-## ML Flow
+## Examples
+
+### ML Flow
 
 Python resolvers can also be used to load and run ML models. An example using ML Flow is shown below.
 This example loads a model from the ML Flow registry and uses it to make predictions. Using the [@before_all](/docs/best-practices#use-the-decorator-to-configure-global-variables-for-your-resolvers)
