Change _.ts to _.at in mentioning aggregations

--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -148,7 +148,7 @@ class User:
 ```
 
 In this code, the windowed feature will return the sum of transaction amounts for the given user over the last 30, 60,
-and 90 days. `_.ts > _.chalk_window` is a boolean condition checking that the current transaction's timestamp is greater
+and 90 days. `_.at > _.chalk_window` is a boolean condition checking that the current transaction's timestamp is greater
 than the start of the current window duration.
 
 ### Nested windowed feature references
