--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -114,6 +114,7 @@ infrastructure in your cloud account:
                 "iam:ListSSHPublicKeys",
                 "iam:ListRoles",
                 "iam:ListRolePolicies",
+                "iam:ListRoleTags",
                 "iam:ListPolicyVersions",
                 "iam:ListPolicyTags",
                 "iam:ListPolicies",
