--- a/model_training.mdx
+++ b/model_training.mdx
@@ -10,7 +10,7 @@ import { TipInfo } from '@/components/Tip'
 ---
 
 Chalk provides single node and distributed training capabilities that leverage your existing feature infrastructure
-and generate [Model Artifacts](/docs/model_registry).
+and generate [Model Artifacts](/docs/model_registry). These Model Artifacts can be registered into the [Model Registry](/docs/model_registry)
 
 ## Training Overview
 
@@ -30,181 +30,128 @@ Single-node training is ideal for smaller datasets that can fit comfortably in m
 
 ### Basic Training Setup
 
-Here's a complete example of single-node training with PyTorch:
-
-@offline(resource_hint="gpu")
-def train_model(
-    dataset_id: Dataset.id,
-    users: Dataset.users,
-    labels: Dataset.labels,
-) -> ModelTrain:
-
-ModelTrain.execute(
-)
-
-client.train_model(
-    input_features=[
-
-    ],
-    target_feature=,
-    input_ids=[]
-    predict_fn=
-    config={
-    }
-)
-
-@features
-
+Here's a complete example of single-node training with PyTorch.
+Define your training code using `chalk_train` and `chalk_logger` for logging,
+checkpointing, and dataset loading.
 
 ```python
-import os
-import tempfile
 import torch
-import torch.nn as nn
-import torch.nn.functional as F
-import boto3
-from chalk import DataFrame, offline, feature
+import torch.nn
+from torch.utils.data import DataLoader, TensorDataset
+from sklearn.feature_extraction.text import TfidfVectorizer
 
-class MyNeuralNetwork(nn.Module):
-    def __init__(self, input_size, hidden_size, output_size):
-        super(MyNeuralNetwork, self).__init__()
-        self.fc1 = nn.Linear(input_size, hidden_size)
-        self.fc2 = nn.Linear(hidden_size, output_size)
+import chalk.ml.train as chalk_train
+from chalk import chalk_logger
+
+
+class SpamClassifier(nn.Module):
+    def __init__(self, input_size):
+        super().__init__()
+        self.fc = nn.Sequential(nn.Linear(input_size, 32), nn.ReLU(), nn.Linear(32, 2))
 
     def forward(self, x):
-        return self.fc2(F.relu(self.fc1(x)))
+        return self.fc(x)
 
-def transform(users: DataFrame[User]) -> torch.Tensor:
-    feature_columns = [
-        "user.num_transactions",
-        "user.num_transactions_fraud",
-        "user.avg_transaction_amount",
-        "user.account_age_days",
-        "user.percent_online_transactions",
-    ]
-    features_array = users[feature_columns].values
-    return torch.tensor(features_array, dtype=torch.float32)
 
-@feature
-class Dataset:
-    id: str
-    users: DataFrame[User]
-    labels: list[int]
+# Define the preprocessing and data loading code
+def preprocess_data(dataset_name: str):
+    # Use Chalk Train to Load Dataset for Training
+    df = chalk_train.load_dataset(dataset_name=dataset_name).to_pandas()
 
-@feature
-class NNTrainer:
-    dataset_id: Dataset.id
-    dataset: Dataset
-    model_artifact: str
+    data = df[['sms_spam.content']]
+    labels = df['sms_spam.label'].map({'ham': 1, 'spam': 0}).values
 
-@offline(resource_hint="gpu")
-def train_model(
-    dataset_id: Dataset.id,
-    users: Dataset.users,
-    labels: Dataset.labels,
-) -> NNTrainer.model_artifact:
-    lr = float(os.environ["lr"])
-    batch_size = int(os.environ["batch_size"])
-    num_epochs = int(os.environ["num_epochs"])
+    tfidf = TfidfVectorizer(max_features=50)
 
-    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
-    print(f"Using device: {device}")
+    X = torch.tensor(tfidf.fit_transform(data).toarray(), dtype=torch.float32)
+    y = torch.tensor(labels, dtype=torch.long)
 
-    model = MyNeuralNetwork(input_size=5, hidden_size=10, output_size=2)
-    model.to(device)
+    dataset = TensorDataset(X, y)
+    dataloader = DataLoader(dataset, batch_size=config["batch_size"], shuffle=True)
+    return dataloader
 
-    loss_fn = nn.CrossEntropyLoss()
-    optimizer = torch.optim.SGD(model.parameters(), lr=lr)
 
-    features = transform(users).to(device)
+# Define the training code for the model
+def train(dataset_name: str, config: dict):
+    dataloader = preprocess_data(dataset_name=dataset_name)
+    model = SpamClassifier(X.shape[1])
 
-    # Handle label conversion
-    if isinstance(labels.iloc[0], str):
-        label_mapping = {"not_fraud": 0, "fraud": 1}
-        labels_tensor = torch.tensor(
-            [label_mapping.get(label, 0) for label in labels],
-            dtype=torch.long,
-        )
-    else:
-        labels_tensor = torch.tensor(
-            [int(label) for label in labels],
-            dtype=torch.long
-        )
+    criterion = nn.CrossEntropyLoss()
+    optimizer = torch.optim.Adam(model.parameters(), lr=config["lr"])
 
-    labels_tensor = labels_tensor.to(device)
-
-    dataset = torch.utils.data.TensorDataset(features, labels_tensor)
-    dataloader = torch.utils.data.DataLoader(
-        dataset,
-        batch_size=batch_size,
-        shuffle=True,
-    )
-
-    model.train()
-    for epoch in range(num_epochs):
+    for epoch in range(config["num_epochs"]):
         total_loss = 0
-        for batch_features, batch_labels in dataloader:
-            outputs = model(batch_features)
-            loss = loss_fn(outputs, batch_labels)
+        correct = 0
+        total = 0
+
+        for batch_X, batch_y in dataloader:
+            outputs = model(batch_X)
+            loss = criterion(outputs, batch_y)
 
             optimizer.zero_grad()
             loss.backward()
             optimizer.step()
 
             total_loss += loss.item()
+            _, predicted = torch.max(outputs, 1)
+            correct += (predicted == batch_y).sum().item()
+            total += batch_y.size(0)
 
-        if epoch % 10 == 0:
-            avg_loss = total_loss / len(dataloader)
-            print(f'Epoch [{epoch}/{num_epochs}], Average Loss: {avg_loss:.4f}')
+        if epoch % 5 == 0:
+            accuracy = correct / total
 
-    # Save model artifact
-    artifact = {
-        "model_state_dict": model.state_dict(),
-        "optimizer_state_dict": optimizer.state_dict(),
-        "model_config": {
-            "input_size": 5,
-            "hidden_size": 10,
-            "output_size": 2
-        }
-    }
+            chalk_logger.info(f'Epoch {epoch}: Loss={total_loss/len(dataloader):.3f}, Acc={accuracy:.3f}')
 
-    temp_dir = tempfile.mkdtemp()
-    artifact_name = f"model_{dataset_id}.pt"
-    artifact_path = os.path.join(temp_dir, artifact_name)
-
-    torch.save(artifact, artifact_path)
-
-    s3_bucket = os.environ["MODELS_BUCKET"]
-    s3_key = f"models/{artifact_name}"
-
-    s3_client = boto3.client('s3')
-    s3_client.upload_file(artifact_path, s3_bucket, s3_key)
-
-    s3_path = f"s3://{s3_bucket}/{s3_key}"
-
-    os.remove(artifact_path)
-    os.rmdir(temp_dir)
-
-    return Model(
-        success=True,
-        model_artifacts=DataFrame[
-            ModelArtifact(),
-            ...
-        ]
-    )
+            chalk_train.checkpoint(
+                model,
+                metadata=dict(
+                    accuracy=accuracy,
+                    epoch=epoch,
+                )
+            )
 ```
 
-### Key Components of Single-Node Training
+Once your train model is defined, you can run a training job using the client.train_model method:
 
-The example above demonstrates several important patterns:
+```python
+# Create a training run
+training_run = client.train_model(
+    train_fn=train,
+    dataset_name=dataset.dataset_name,
+    model_name="spam_model",
+    config=dict(
+        lr=0.01,
+        num_epochs=50,
+        batch_size=32
+    ),
+    resources=ResourceRequests(
+        cpu=15,
+        memory="15Gi",
+        resource_group="gpu"
+    )
+)
+```
 
-- **Feature Infrastructure Integration**: The `transform()` function shows how to extract features from Chalk DataFrames
-- **Environment Variables**: Training hyperparameters are passed through environment variables for flexibility
-- **GPU Support**: Automatic device detection and model placement on GPU when available
-- **Model Artifacts**: Trained models are saved and uploaded to cloud storage for later registration
-- **Resource Hints**: The `@offline(resource_hint="gpu")` decorator ensures training runs on appropriate hardware
+If you've defined a resource group with GPU access, you can also leverage this for training:
 
----
+```python
+# Create a training run
+training_run = client.train_model(
+    train_fn=train,
+    dataset_name=dataset.dataset_name,
+    model_name="spam_model",
+    config=dict(
+        lr=0.01,
+        num_epochs=50,
+        batch_size=32
+    ),
+    resources=ResourceRequests(
+        cpu=15,
+        memory="15Gi",
+        resource_group="gpu"
+    )
+)
+```
 
 ## Distributed Training
 
