--- a/model_registry.mdx
+++ b/model_registry.mdx
@@ -12,11 +12,10 @@ import { TipInfo } from '@/components/Tip'
 With Chalk you can easily register and load machine learning models into your deployments. You can then run inference on these models. This guide covers how to integrate models into your Chalk applications, including loading existing models and running inference.
 
 Chalk has a few key model concepts:
-- **Model Reference**: A reference to a specific model version, alias, or as-of timestamp. Used to load models into deployments and track model performance
-and feature distributions for a deployed model.
-- **Model Name**: The unique name of a model in Chalk.
+- **Model Name**: A namespace for a model (which might have multiple implementations).
 - **Model Version**: A model that has been registered with a specific version number—these are models that can be loaded into Chalk deployments.
 - **Model Artifact**: The actual files that make up a model, such as weights, configuration files, and tokenizers.
+- **Model Reference**: A reference to a specific model version. Used to load models into deployments and track model performance and feature distributions for a deployed model.
 
 Generally running inference on models in Chalk involves three steps:
 1. Registering models in Chalk
@@ -38,14 +37,16 @@ Existing machine learning models can be registered in Chalk using the `ChalkClie
 To register a model from local files, provide the path to the model files and any additional files needed for inference, such as tokenizers or configuration files.
 You'll also want to specify the input and output schema for the model, which helps with validation and integration in your Chalk deployment.
 
+When registering a new model, you can specify a description which will be shown for the `Model` object in the Chalk dashboard. To register a new
+model, you should use the `client.register_model` method. This will create a new model in the registry and add a new model version.
+
 ```python
-import pyarrow as pa
 from chalk.client import ChalkClient
 
 client = ChalkClient()
 
 client.register_model(
-    name="ChurnModel",
+    name="RiskScoreModel",
     aliases=["v1.0"],
     model_path=["./risk_score_model.pth"],
     additional_files=[
@@ -54,8 +55,6 @@ client.register_model(
     description="Model for predicting user risk scores",
     model_type="pytorch",
     model_format="pytorch",
-    input=pa.large_string(),
-    output=pa.float32(),
     metadata={
         "framework": "pytorch",
         "training_date": "2025-07-29",
@@ -68,7 +67,7 @@ client.register_model(
 ```
 #### Registering From Python Model Objects
 
-Models can also be registered from Python objects, such as Scikit-learn or PyTorch models. This allows you to register models directly from your
+Models can also be registered directly from Python objects, such as Scikit-learn or PyTorch models. This allows you to register models directly from your
 code without needing to save them to disk first.
 ```python
 from chalk.client import ChalkClient
@@ -81,7 +80,8 @@ rfc = RandomForestClassifier()
 rfc.fit(X_train, y_train)
 
 
-client.register_model(
+# Since the model has already been registered, we can create a new version by calling register_model_version
+client.register_model_version(
     name="RiskScoreModel",
     aliases=["v1.0.0"],
     model=rfc,  # Directly pass the model object
@@ -154,7 +154,7 @@ performance over time.
 
 ## Running Inference on Models
 
-Once models are registered and loaded into your deployment, you can run inference using several approaches:
+Once models are registered and loaded into your deployment, you can run inference on your models:
 
 ```python
 from chalk.ml import ModelReference
@@ -171,12 +171,6 @@ risk_model_latest = ModelReference.from(
 risk_model_v1_0_0 = ModelReference(
     name="RiskScoreModel",
     version=1,
-)
-
-# Load a model from a specific time
-risk_model_asof = ModelReference(
-    name="RiskScoreModel",
-    as_of=datetime(2025, 7, 29, 12, 0, 0)
 )
 
 # Reference the loaded model(s) in inference
